[package]
name = "connector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[dependencies]
jni = { version = "0.19.0" } # jni bindings

fdk-aac-sys = "0.4.0"        # aac
mpg123-sys = "0.6.0"         # mp3
ogg-sys = "0.0.9"            # ogg
audiopus_sys = "0.2.1"       # opus
vorbis-sys = "0.1.1"         # vorbis
libsamplerate-sys = "0.1.10" # samplerate
env_logger = "0.9.0"
log = "0.4.14"
